syntax="proto3";

package com.chatnow.core.domain.protobuf.command;

message SendToGroupCommand{
    sint32 type=1;
    string groupName=2;
    string content=3;
    string token=4;
}


message SendToGroupCommandResp{
    sint32 type=1;
    sint32 resultCode=2;
}
